--- a/template/no_sidebar.html
+++ b/template/no_sidebar.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="${description}">
     <meta name="author" content="${author}">
-    <link rel="shortcut icon" href="${icon}" type="image/x-icon" />
+    <link rel="shortcut icon" href="${favicon}" type="image/x-icon" />
 
     <link href="https://stackpath.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" integrity="sha384-4FeI0trTH/PCsLWrGCD1mScoFu9Jf2NdknFdFoJhXZFwsvzZ3Bo5sAh7+zL8Xgnd" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet">
