--- a/template/no_sidebar.html
+++ b/template/no_sidebar.html
@@ -46,6 +46,10 @@
                             <a href="${mainlink}" title="Home">Home</a>
                         </li>
 
+                        <li id="menuitem_forms" class="">
+                            <a href="${mainlink}/forms.html" title="Forms">Forms</a>
+                        </li>
+
                         <li id="menuitem_languages" class="">
                             <a href="${mainlink}/languages.html" title="Languages">Languages</a>
                         </li>
