Remove class="active" in webpages, going for as simple as possible

--- a/template/no_sidebar.html
+++ b/template/no_sidebar.html
@@ -42,7 +42,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
 
-                        <li id="menuitem_dataset" class="active">
+                        <li id="menuitem_dataset" class="">
                             <a href="${mainlink}" title="Home">Home</a>
                         </li>
 
