--- a/template/with_sidebar.html
+++ b/template/with_sidebar.html
@@ -120,7 +120,7 @@
                 </div>
 
             </div>
-            <div id="sidebar" class="span4">
+            <!--div id="sidebar" class="span4">
 
                 <div class="well home-sidebar">
                     <p>
@@ -140,7 +140,7 @@
                     ${home_sidebar}
 
                 </div>
-            </div>
+</div-->
         </div>
         <div class="row-fluid">
             <div class="span12">
