--- a/template/with_sidebar.html
+++ b/template/with_sidebar.html
@@ -120,9 +120,9 @@
                 </div>
 
             </div>
-            <!--div id="sidebar" class="span4">
+            <div id="sidebar" class="span4">
 
-                <div class="well home-sidebar">
+                <!--div class="well home-sidebar">
                     <p>
                         <a href="languages" title="Languages">Languages:</a> Browse the data by language.
                     </p>
@@ -135,12 +135,11 @@
                     <p>
                         <a href="contact" title="Contact">Contact:</a> For requests and suggestions.
                     </p>
-                </div>
+</div-->
                 <div class="well home-sidebar">
                     ${home_sidebar}
-
                 </div>
-</div-->
+            </div>
         </div>
         <div class="row-fluid">
             <div class="span12">
