Update template for jinja

--- a/template/layout.html
+++ b/template/layout.html
@@ -24,28 +24,28 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-danger">
-        <a href="/" class="navbar-brand">MYBrand</a>
+        <a href="index.html" class="navbar-brand">{{title }}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="mainnavbar">
                                            <span class="navbar-toggler-icon"></span>
                                        </button>
         <div class="navbar-collapse collapse justify-content-stretch" id="mainnavbar">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Link <span class="sr-only">Home</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
+                                               <li class="nav-item active">
+                                                   <a class="nav-link" href="forms.html">Forms</a>
+                                               </li>
+                                               <li class="nav-item">
+                                                   <a class="nav-link" href="languages.html">Languages</a>
+                                               </li>
+                                               <li class="nav-item">
+                                                   <a class="nav-link" href="parameters.html">Parameters</a>
+                                               </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Download</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="//codeply.com">Codeply</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
             </ul>
         </div>
@@ -61,24 +61,6 @@
                 <div class="home-main">
                     <p>{{home_nosb_main}}</p>
                 </div>
-
-                <table id="data_table" class="display">
-                  <tr>
-                    <th>Col1</th>
-                    <th>Col2</th>
-                    <th>Sum</th>
-                  </tr>
-                  <tr>
-                    <td>Test A</td>
-                    <td>14</td>
-                    <td>42</td>
-                  </tr>
-                  <tr>
-                    <td>Test B</td>
-                    <td>13</td>
-                    <td>845</td>
-                  </tr>
-                </table>
 
             </div>
         </div>
