--- a/template/layout.html
+++ b/template/layout.html
@@ -81,7 +81,10 @@
                         <br/>tresoldi@shh.mpg.de</p>
                 </div>
             </div>
-            <div class="footer-copyright text-center">Copyright &copy; 2020, Tiago Tresoldi</div>
+            <div class="footer-copyright text-center">
+Copyright &copy; 2020, Tiago Tresoldi<br />
+This page was compiled on {{ current_time }}
+            </div>
     </footer>
 
     <!-- Load jQuery, DataTables, and Bootstrap JS libraries -->
