Little darked bg

--- a/template_html/main.css
+++ b/template_html/main.css
@@ -4,7 +4,7 @@ html {
     min-height: 100%;
 }
 body {
-    background-color: #fff;
+    background-color: #fdfdfd;
 }
 .page-footer {
     background-color: #222;
